# gdl

./: .cvsignore  AUTHORS  ChangeLog  MAINTAINERS  Makefile.am  NEWS  README  acconfig.h  autogen.sh  configure.in  gdl-1.0.pc.in  gdl-3.0.pc.in  gdl-gnome-1.0.pc.in  gdl.doap  gdl.m4  gdl.spec.in  gdlConf.sh.in  meson.build
docs/reference/: Makefile.am  gdl-docs.sgml  gdl-sections.txt  gdl.types  version.xml.in
event-service/: .cvsignore  ChangeLog  Makefile.am  README  event-channel-impl.c  event-channel.h  gdf-event-server.c  gdf-event-server.h  generic-factory-impl.c  generic-factory.h
gdl/: .cvsignore  Makefile.am  README.gdl-dock  TODO.gdl-dock  default-icon.c  default-icon.h  gdl-combo-button.c  gdl-combo-button.h  gdl-data-frame.c  gdl-data-frame.h  gdl-data-model-test.c  gdl-data-model.c  gdl-data-model.h  gdl-data-row.c  gdl-data-row.h  gdl-data-view.c  gdl-data-view.h  gdl-deprecated.c  gdl-dock-bar.c  gdl-dock-bar.h  gdl-dock-item-button-image.c  gdl-dock-item-button-image.h  gdl-dock-item-grip.c  gdl-dock-item-grip.h  gdl-dock-item.c  gdl-dock-item.h  gdl-dock-layout.c  gdl-dock-layout.h  gdl-dock-master.c  gdl-dock-master.h  gdl-dock-notebook.c  gdl-dock-notebook.h  gdl-dock-object.c  gdl-dock-object.h  gdl-dock-paned.c  gdl-dock-paned.h  gdl-dock-placeholder.c  gdl-dock-placeholder.h  gdl-dock-tablabel.c  gdl-dock-tablabel.h  (+28 more)
gdl/deprecated/: gdl-dock-tablabel.c  gdl-dock-tablabel.h
idl/: GDL.idl  Makefile.am  editor-buffer.idl  editor-gutter.idl  symbol-browser.idl
m4/: introspection.m4
po/: .cvsignore  ChangeLog  LINGUAS  POTFILES.in  POTFILES.skip  am.po  ar.po  as.po  ast.po  az.po  be.po  bg.po  bn.po  bs.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fi.po  fr.po  fur.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  hy.po  id.po  it.po  (+42 more)
scintilla-control/: .cvsignore  Bonobo_Control_Scintilla.oaf.in  Makefile.am  scintilla-control.c  scintilla-editor-buffer.c  scintilla-editor-buffer.h  scintilla-editor-gutter.c  scintilla-editor-gutter.h  scintilla-find.c  scintilla-find.h  scintilla-highlight.c  scintilla-highlight.h  scintilla-persist-file.c  scintilla-persist-file.h  scintilla-persist-stream.c  scintilla-persist-stream.h  scintilla-stream.c  scintilla-stream.h  scintilla-ui.xml  scintilla.oafinfo  test.c
scintilla-control/scintilla/: .cvsignore  Accessor.h  AutoComplete.cxx  AutoComplete.h  CallTip.cxx  CallTip.h  CellBuffer.cxx  CellBuffer.h  ContractionState.cxx  ContractionState.h  Document.cxx  Document.h  DocumentAccessor.cxx  DocumentAccessor.h  Editor.cxx  Editor.h  Face.py  Indicator.cxx  Indicator.h  KeyMap.cxx  KeyMap.h  KeyWords.cxx  KeyWords.h  LexAVE.cxx  LexCPP.cxx  LexConf.cxx  LexHTML.cxx  LexLua.cxx  LexOthers.cxx  LexPascal.cxx  LexPerl.cxx  LexPython.cxx  LexSQL.cxx  LexVB.cxx  License.txt  LineMarker.cxx  LineMarker.h  Makefile.am  Makefile.in  PlatGTK.cxx  (+23 more)
symbol-browser-control/: .cvsignore  GNOME_Development_SymbolBrowser.oaf.in  Makefile.am  factory.c  gnome-symbol-browser.xml  symbol-browser-cobject.c  symbol-browser-cobject.h  symbol-browser.c  symbol-browser.h  test-symbol-browser-ui.xml  test-symbol-browser.c
symbol-browser-control/pixmaps/: .cvsignore  Makefile.am  class.xpm  enum.xpm  extern_variable.xpm  folder.xpm  function.xpm  macro.xpm  member.xpm  private.xpm  protected.xpm  public.xpm  struct.xpm  sv_enum.xpm  sv_enumerator.xpm  sv_macro.xpm  sv_private_var.xpm  sv_protected_fun.xpm  sv_protected_var.xpm  sv_public_fun.xpm  sv_public_var.xpm  sv_struct.xpm  sv_typedef.xpm  sv_unknown.xpm  unknown.xpm  variable.xpm
symbol-browser-control/tagmanager/: .cvsignore  Makefile.am  args.c  asm.c  asp.c  awk.c  beta.c  c.c  cobol.c  ctags.c  ctags.h  debug.c  debug.h  eiffel.c  entry.c  entry.h  fortran.c  general.h  get.c  get.h  keyword.c  keyword.h  lisp.c  lua.c  options.c  options.h  parse.c  parse.h  parsers.h  pascal.c  perl.c  php.c  read.c  read.h  regex.c  rexx.c  scheme.c  sh.c  slang.c  sort.c  (+14 more)
symbol-browser-control/tagmanager/include/: Makefile.am  tm_file_entry.h  tm_project.h  tm_source_file.h  tm_symbol.h  tm_tag.h  tm_work_object.h  tm_workspace.h
trunk/: .cvsignore  AUTHORS  MAINTAINERS  Makefile.am  NEWS  README  gdl-1.0.pc.in  gdl-gnome-1.0.pc.in
trunk/gdl/: .cvsignore  Makefile.am  gdl-dock-item-grip.c  gdl-dock-item.c  gdl-dock-layout.c  gdl-dock-layout.h  gdl-dock-master.c  gdl-dock-notebook.c  gdl-dock-object.c  gdl-dock-object.h  gdl-dock-paned.c  gdl-dock-paned.h  gdl-dock-placeholder.h  gdl-dock-tablabel.c  gdl-switcher.c  gdl-switcher.h  gdl.h  test-dock.c
trunk/po/: LINGUAS  POTFILES.in  ar.po  az.po  dz.po  el.po  en_CA.po  en_GB.po  es.po  fi.po  ga.po  hu.po  ja.po  mk.po  ne.po  pl.po  pt.po  pt_BR.po  ru.po  rw.po  sk.po  sr.po  sr@Latn.po  sv.po  vi.po  zh_CN.po
