SUBDIRS = idl gdl po
# SUBDIRS = idl gdl scintilla-control symbol-browser-control po intl

EXTRA_DIST = 			\
	MAINTAINERS		\
	AUTHORS			\
	gdl.spec.in		\
	intltool-extract.in	\
	intltool-merge.in	\
	intltool-update.in

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = gdl-1.0.pc

CLEANFILES = gdl-1.0.pc


