SUBDIRS = gdl docs po

DISTCHECK_CONFIGURE_FLAGS = --enable-gtk-doc

EXTRA_DIST = 			\
	MAINTAINERS		\
	AUTHORS			\
	gdl.spec.in		\
	intltool-extract.in	\
	intltool-merge.in	\
	intltool-update.in

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = gdl-1.0.pc 

CLEANFILES = gdl-1.0.pc intltool-extract intltool-merge intltool-update


