EXTRA_DIST = \
	sv_class.xpm \
	sv_enumerator.xpm \
	sv_enum.xpm \
	sv_function.xpm \
	sv_macro.xpm \
	sv_private_fun.xpm \
	sv_private_var.xpm \
	sv_protected_fun.xpm \
	sv_protected_var.xpm \
	sv_public_fun.xpm \
	sv_public_var.xpm \
	sv_static_fun.xpm \
	sv_static_var.xpm \
	sv_struct.xpm \
	sv_typedef.xpm \
	sv_unknown.xpm \
	sv_variable.xpm

